reorganized css files

--- a/frontend/src/utils/styles/LandingPageStyles.css
+++ b/frontend/src/utils/styles/LandingPageStyles.css
@@ -1,4 +1,4 @@
-/* .landingIcon {
+.landingIcon {
   display: flex;
   margin: 1rem;
 }
@@ -21,4 +21,4 @@
 .landingLogo {
   display: flex;
   margin: auto;
-} */
+}
