--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -3,22 +3,24 @@
   margin: 1rem;
 }
 
-.landingPar {
+/* .landingPar {
   display: flex;
   align-items: center;
-}
+} */
 
-.landingGrid1 {
+/* .landingGrid1 {
   margin-top: 2rem;
   margin-bottom: 2rem;
-}
+} */
 
-.landingGrid2 {
+/* .landingGrid2 {
   margin-top: 2rem;
   margin-bottom: 2rem;
-}
+} */
 
-.landingLogo {
+/* .landingLogo {
   display: flex;
   margin: auto;
-} */
+  width: 50%;
+  height: auto;
+} */ */
