created a 404 erro page with css

--- a/frontend/src/utils/styles/LandingPageStyles.css
+++ b/frontend/src/utils/styles/LandingPageStyles.css
@@ -31,6 +31,7 @@
   margin: 10rem;
 }
 
+/* at 900px and below the css will take effect */
 @media (max-width: 900px) {
   .landingGrid1 {
     display: flex;
